optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_convert_jsx_events.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

const ManyEventsComponent = component$(() => {
	return (
		<div>
			<button
				onClick$={() => {}}
				onDblClick$={() => {}}
			>
				click
			</button>
			<button
				onClick$={() => {}}
				onBlur$={() => {}}
				on-anotherCustom$={() => {}}
				document:onFocus$={() => {}}
				window:onClick$={() => {}}
			>
				click
			</button>
		</div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_ndbrzxiyG3g = ()=>import("./test.tsx_ManyEventsComponent_component_ndbrzxiyG3g");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_ndbrzxiyG3g, "ManyEventsComponent_component_ndbrzxiyG3g"));


None
============================= test.tsx_ManyEventsComponent_component_ndbrzxiyG3g.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_2 = ()=>import("./test.tsx");
const i_onFocus = ()=>import("./test.tsx");
const i_on-anotherCustom = ()=>import("./test.tsx");
const i_onBlur = ()=>import("./test.tsx");
const i_1 = ()=>import("./test.tsx");
const i_onDblClick = ()=>import("./test.tsx");
const i_onClick = ()=>import("./test.tsx");
export const ManyEventsComponent_component_ndbrzxiyG3g = ()=>{
	return /*#__PURE__*/ _jsxSorted("div", null, null, [/*#__PURE__*/ _jsxSorted("button", {
		"on:click": /*#__PURE__*/ qrl(i_onClick, "ManyEventsComponent_component_div_button_onClick"),
		"on:dblclick": /*#__PURE__*/ qrl(i_onDblClick, "ManyEventsComponent_component_div_button_onDblClick")
	}, null, "click", 3, null), /*#__PURE__*/ _jsxSorted("button", {
		"on-document:focus": /*#__PURE__*/ qrl(i_onFocus, "ManyEventsComponent_component_div_button_onFocus"),
		"on-window:click": /*#__PURE__*/ qrl(i_2, "ManyEventsComponent_component_div_button_onClick_2"),
		"on:another-custom": /*#__PURE__*/ qrl(i_on-anotherCustom, "ManyEventsComponent_component_div_button_on-anotherCustom"),
		"on:blur": /*#__PURE__*/ qrl(i_onBlur, "ManyEventsComponent_component_div_button_onBlur"),
		"on:click": /*#__PURE__*/ qrl(i_1, "ManyEventsComponent_component_div_button_onClick_1")
	}, null, "click", 3, null)], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "ManyEventsComponent_component_ndbrzxiyG3g",
  "entry": null,
  "displayName": "test.tsx_ManyEventsComponent_component",
  "hash": "ndbrzxiyG3g",
  "canonicalFilename": "test.tsx_ManyEventsComponent_component_ndbrzxiyG3g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    85,
    398
  ]
}
*/
== DIAGNOSTICS ==

[]
