optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_convert_rest_props.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useTask$ } from '@qwik.dev/core'

export default component$<any>(({ ...props }) => {
useTask$(() => {
	props.checked
})

return 'hi'
})

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_JTJcH3nK8No = ()=>import("./test.tsx_component_useTask_JTJcH3nK8No");
const i_G7jVUwdBFEM = ()=>import("./test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "component_G7jVUwdBFEM"));


None
============================= test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { qrl, useTaskQrl } from "@qwik.dev/core";
export const component_G7jVUwdBFEM = ({ ...props })=>{
	/*#__PURE__*/ useTaskQrl(/*#__PURE__*/ qrl(i_JTJcH3nK8No, "component_useTask_JTJcH3nK8No"));
	return "hi";
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    86,
    155
  ]
}
*/
============================= test.tsx_component_useTask_JTJcH3nK8No.js (ENTRY POINT)==

export const component_useTask_JTJcH3nK8No = ()=>{
	props.checked;
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_useTask_JTJcH3nK8No",
  "entry": null,
  "displayName": "test.tsx_component_useTask",
  "hash": "JTJcH3nK8No",
  "canonicalFilename": "test.tsx_component_useTask_JTJcH3nK8No",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "useTask$",
  "captures": false,
  "loc": [
    115,
    139
  ]
}
*/
== DIAGNOSTICS ==

[]
