optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_extract_single_qrl_2.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useStore, useSignal } from '@qwik.dev/core';
const Parent = component$(() => {
const cart = useStore<Cart>([]);
const results = useSignal(['foo', 'bar']);

return (
  <div>
    <button id="first" onClick$={() => (results.value = ['item1', 'item2'])}></button>

    {results.value.map((item, key) => (
      <button
        id={'second-' + key}
        onClick$={() => {
          cart.push(item);
        }}
      >
        {item}
      </button>
    ))}
    <ul>
      {cart.map((item) => (
        <li>
          <span>{item}</span>
        </li>
      ))}
    </ul>
  </div>
);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_fxETLug1yE4 = ()=>import("./test.tsx_test.tsx_Parent_component_fxETLug1yE4");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_fxETLug1yE4, "test.tsx_Parent_component_fxETLug1yE4"));


None
============================= test.tsx_test.tsx_Parent_component_div_map_button_onClick_Vdt02nEoJkM.js (ENTRY POINT)==

import { useLexicalScope } from "@qwik.dev/core";
export const test.tsx_Parent_component_div_map_button_onClick_Vdt02nEoJkM = (_, _1, item)=>{
	const [cart] = useLexicalScope();
	cart.push(item);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Parent_component_div_map_button_onClick_Vdt02nEoJkM",
  "entry": null,
  "displayName": "test.tsx_Parent_component_div_map_button_onClick",
  "hash": "Vdt02nEoJkM",
  "canonicalFilename": "test.tsx_test.tsx_Parent_component_div_map_button_onClick_Vdt02nEoJkM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": true,
  "loc": [
    0,
    0
  ]
}
*/
============================= test.tsx_test.tsx_Parent_component_fxETLug1yE4.js (ENTRY POINT)==

import { _jsxSorted, qrl, useSignal, useStore } from "@qwik.dev/core";
const i_Vdt02nEoJkM = ()=>import("./test.tsx_test.tsx_Parent_component_div_map_button_onClick_Vdt02nEoJkM");
const i_onClick = ()=>import("./test.tsx");
export const test.tsx_Parent_component_fxETLug1yE4 = ()=>{
	const cart = useStore([]);
	const results = useSignal(["foo", "bar"]);
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		/*#__PURE__*/ _jsxSorted("button", { on:click: /*#__PURE__*/ qrl(i_onClick, "Parent_component_div_button_onClick", [results]) }, { id: "first" }, null, 3, null),
		results.value.map((item, key)=>/*#__PURE__*/ _jsxSorted("button", {
			id: "second-" + key,
			q:p: item,
			on:click: /*#__PURE__*/ qrl(i_Vdt02nEoJkM, "test.tsx_Parent_component_div_map_button_onClick_Vdt02nEoJkM", [cart])
		}, null, item, 1, null)),
		/*#__PURE__*/ _jsxSorted("ul", null, null, cart.map((item)=>/*#__PURE__*/ _jsxSorted("li", null, null, /*#__PURE__*/ _jsxSorted("span", null, null, item, 1, null), 3, null)), 1, null)
	], 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "test.tsx_Parent_component_fxETLug1yE4",
  "entry": null,
  "displayName": "test.tsx_Parent_component",
  "hash": "fxETLug1yE4",
  "canonicalFilename": "test.tsx_test.tsx_Parent_component_fxETLug1yE4",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    92,
    603
  ]
}
*/
== DIAGNOSTICS ==

[]
