optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_extract_single_qrl_with_nested_components.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { $, component$, useSignal, Signal } from '@qwik.dev/core';
const Foo = component$(() => {
  const data = useSignal<Signal<any>[]>([]);
  const Inner = component$((props) => {
    const data = props.data
    return <div>{data.value.map(item => <p onClick$={() => console.log(item.value.id)}>{item.value.id}</p>)}</div>
  })
  return <Inner data={data} />
})

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_AuJ9mTBx5YA = ()=>import("./test.tsx_Foo_component_Inner_component_AuJ9mTBx5YA");
const i_HTDRsvUbLiE = ()=>import("./test.tsx_Foo_component_HTDRsvUbLiE");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_HTDRsvUbLiE, "Foo_component_HTDRsvUbLiE"));


None
============================= test.tsx_Foo_component_HTDRsvUbLiE.js (ENTRY POINT)==

import { _jsxSorted, componentQrl, qrl, useSignal } from "@qwik.dev/core";
const i_AuJ9mTBx5YA = ()=>import("./test.tsx_Foo_component_Inner_component_AuJ9mTBx5YA");
export const Foo_component_HTDRsvUbLiE = ()=>{
	const data = useSignal([]);
	const Inner = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_AuJ9mTBx5YA, "Foo_component_Inner_component_AuJ9mTBx5YA", [data]));
	return _jsxSorted(Inner, null, { data }, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_HTDRsvUbLiE",
  "entry": null,
  "displayName": "test.tsx_Foo_component",
  "hash": "HTDRsvUbLiE",
  "canonicalFilename": "test.tsx_Foo_component_HTDRsvUbLiE",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    90,
    363
  ]
}
*/
============================= test.tsx_Foo_component_Inner_component_AuJ9mTBx5YA.js (ENTRY POINT)==

import { _fnSignal, _jsxSorted, qrl } from "@qwik.dev/core";
const i_htbkkW8S4e0 = ()=>import("./test.tsx_Foo_component_Inner_component_div_map_p_onClick_htbkkW8S4e0");
const _hf0 = (p0)=>p0.value.id;
const _hf0_str = "p0.value.id";
export const Foo_component_Inner_component_AuJ9mTBx5YA = (props)=>{
	const [data] = useLexicalScope();
	const data = props.data;
	const Foo_component_Inner_component_div_map_p_onClick_htbkkW8S4e0 = /*#__PURE__*/ qrl(i_htbkkW8S4e0, "Foo_component_Inner_component_div_map_p_onClick_htbkkW8S4e0");
	return /*#__PURE__*/ _jsxSorted("div", null, null, data.value.map((item)=>/*#__PURE__*/ _jsxSorted("p", {
		"on:click": Foo_component_Inner_component_div_map_p_onClick_htbkkW8S4e0,
		"q:p": item
	}, null, _fnSignal(_hf0, [item], _hf0_str), 1, null)), 1, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Inner_component_AuJ9mTBx5YA",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Inner_component",
  "hash": "AuJ9mTBx5YA",
  "canonicalFilename": "test.tsx_Foo_component_Inner_component_AuJ9mTBx5YA",
  "path": "",
  "extension": "js",
  "parent": "component",
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": true,
  "loc": [
    170,
    329
  ]
}
*/
============================= test.tsx_Foo_component_Inner_component_div_map_p_onClick_htbkkW8S4e0.js (ENTRY POINT)==

export const Foo_component_Inner_component_div_map_p_onClick_htbkkW8S4e0 = (_, _1, item)=>console.log(item.value.id);


None
/*
{
  "origin": "test.tsx",
  "name": "Foo_component_Inner_component_div_map_p_onClick_htbkkW8S4e0",
  "entry": null,
  "displayName": "test.tsx_Foo_component_Inner_component_div_map_p_onClick",
  "hash": "htbkkW8S4e0",
  "canonicalFilename": "test.tsx_Foo_component_Inner_component_div_map_p_onClick_htbkkW8S4e0",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "eventHandler",
  "ctxName": "onClick$",
  "captures": false,
  "loc": [
    0,
    0
  ]
}
*/
== DIAGNOSTICS ==

[]
