optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_handle_dangerously_set_inner_html.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from "@qwik.dev/core";
const Cmp = component$(() => {
	const htmlSignal = useSignal("<h2><span>I'm a signal value!</span></h2>");
	return (
		<div>
			<div>
				<span id="first" dangerouslySetInnerHTML="vanilla HTML here" />
			</div>
			<div>
				<span id="second" dangerouslySetInnerHTML="<h1>I'm an h1!</h1>" class="after" />
			</div>
			<div>
				<span id="third" dangerouslySetInnerHTML={htmlSignal.value} class="after" />
				<button
					onClick$={() =>
						(htmlSignal.value = "<h2><span>I'm a updated signal value!</span></h2>")
					}
				></button>
			</div>
		</div>
	);
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_qsBJpzBk9qc = ()=>import("./test.tsx_Cmp_component_qsBJpzBk9qc");
/*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_qsBJpzBk9qc, "Cmp_component_qsBJpzBk9qc"));


None
============================= test.tsx_Cmp_component_qsBJpzBk9qc.js (ENTRY POINT)==

import { _jsxSorted, qrl } from "@qwik.dev/core";
const i_onClick = ()=>import("./test.tsx");
export const Cmp_component_qsBJpzBk9qc = ()=>{
	const htmlSignal = useSignal("<h2><span>I'm a signal value!</span></h2>");
	return /*#__PURE__*/ _jsxSorted("div", null, null, [
		/*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _jsxSorted("span", null, {
			id: "first",
			dangerouslySetInnerHTML: "vanilla HTML here"
		}, null, 3, null), 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, /*#__PURE__*/ _jsxSorted("span", null, {
			id: "second",
			dangerouslySetInnerHTML: "<h1>I'm an h1!</h1>",
			class: "after"
		}, null, 3, null), 3, null),
		/*#__PURE__*/ _jsxSorted("div", null, null, [/*#__PURE__*/ _jsxSorted("span", { dangerouslySetInnerHTML: _wrapProp(htmlSignal) }, {
			id: "third",
			class: "after"
		}, null, 3, null), /*#__PURE__*/ _jsxSorted("button", { on:click: /*#__PURE__*/ qrl(i_onClick, "Cmp_component_div_div_button_onClick", [htmlSignal]) }, null, null, 3, null)], 3, null)
	], 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "Cmp_component_qsBJpzBk9qc",
  "entry": null,
  "displayName": "test.tsx_Cmp_component",
  "hash": "qsBJpzBk9qc",
  "canonicalFilename": "test.tsx_Cmp_component_qsBJpzBk9qc",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    68,
    609
  ]
}
*/
== DIAGNOSTICS ==

[]
