optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_merge_attributes_with_spread_props.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$ } from '@qwik.dev/core';

export default component$((props) => {
	return <div {...props} class={[props.class, 'component']} />;
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_G7jVUwdBFEM = ()=>import("./test.tsx_component_G7jVUwdBFEM");
export default /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_G7jVUwdBFEM, "component_G7jVUwdBFEM"));


None
============================= test.tsx_component_G7jVUwdBFEM.js (ENTRY POINT)==

import { _getConstProps, _getVarProps, _jsxSplit } from "@qwik.dev/core";
export const component_G7jVUwdBFEM = (props)=>{
	return /*#__PURE__*/ _jsxSplit("div", {
		..._getVarProps(props),
		class: [props.class, "component"]
	}, _getConstProps(props), null, 0, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "component_G7jVUwdBFEM",
  "entry": null,
  "displayName": "test.tsx_component",
  "hash": "G7jVUwdBFEM",
  "canonicalFilename": "test.tsx_component_G7jVUwdBFEM",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    72,
    149
  ]
}
*/
== DIAGNOSTICS ==

[]
