optimizer/src/snapshots/qwik_optimizer__spec_parity_tests__tests__spec_should_merge_bind_checked_and_on_input.snap
---
source: optimizer/src/spec_parity_tests.rs
expression: output
---
==INPUT==

import { component$, useSignal } from "@qwik.dev/core";

export const FieldInput = component$(() => {
  const localValue = useSignal(false);

  return (
    <input
      onInput$={() => {
        console.log("test");
      }}
      bind:checked={localValue}
    />
  );
});

============================= test.js ==

import { componentQrl, qrl } from "@qwik.dev/core";
const i_O84bGdeej0g = ()=>import("./test.tsx_FieldInput_component_O84bGdeej0g");
export const FieldInput = /*#__PURE__*/ componentQrl(/*#__PURE__*/ qrl(i_O84bGdeej0g, "FieldInput_component_O84bGdeej0g"));


None
============================= test.tsx_FieldInput_component_O84bGdeej0g.js (ENTRY POINT)==

import { _jsxSorted, qrl, useSignal } from "@qwik.dev/core";
const i_onInput = ()=>import("./test.tsx");
export const FieldInput_component_O84bGdeej0g = ()=>{
	const localValue = useSignal(false);
	return /*#__PURE__*/ _jsxSorted("input", { on:input: /*#__PURE__*/ qrl(i_onInput, "FieldInput_component_input_onInput") }, {
		checked: localValue,
		on:input: inlinedQrl(_chk, "_chk", [localValue])
	}, null, 3, null);
};


None
/*
{
  "origin": "test.tsx",
  "name": "FieldInput_component_O84bGdeej0g",
  "entry": null,
  "displayName": "test.tsx_FieldInput_component",
  "hash": "O84bGdeej0g",
  "canonicalFilename": "test.tsx_FieldInput_component_O84bGdeej0g",
  "path": "",
  "extension": "js",
  "parent": null,
  "ctxKind": "function",
  "ctxName": "component$",
  "captures": false,
  "loc": [
    94,
    271
  ]
}
*/
== DIAGNOSTICS ==

[]
